--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=bni
 
-spring.datasource.url=jdbc:postgresql://postgres-db:5432/postgres-db
+spring.datasource.url=jdbc:postgresql://postgres-db:5432/spring-boot-db
 # spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/FREEPDB1
 spring.datasource.username=admin
 spring.datasource.password=admin123
