--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=bni
 
-spring.datasource.url=jdbc:postgresql://postgres-db:5432/spring-boot-db
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring-boot-db
 # spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/FREEPDB1
 spring.datasource.username=admin
 spring.datasource.password=admin123
@@ -8,6 +8,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+file.upload-dir=uploads
+spring.servlet.multipart.enabled=true
 
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.probes.enabled=true
